resources/css/style.css
*{
    background-color: black;
    text-align: center;
}
h1 {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: normal;
    font-size: 50px;
    color: white;
}
a {
    color:aquamarine;
    font-size: 16px;
}
h3 {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: 300px;
    font-size: 42px;
    color: white;
}
p {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 21px;
    color: grey;
}
p .copyright {
    text-align: right;
    color: grey;
}

